--- a/src/App.css
+++ b/src/App.css
@@ -19,5 +19,12 @@ header {
   min-height: 10vh;
   background: #fff620;
   color: #5973bd;
-  margin: 0;
+}
+
+.head-links {
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
 }
