--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@ body {
   margin: 0;
   height: 100vh;
 }
+canvas {
+  display: block;
+  position: absolute;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 
 .App {
   text-align: center;
