--- a/src/App.css
+++ b/src/App.css
@@ -87,13 +87,19 @@ main {
   margin: 4%;
   background:rgba(0, 0, 0, 0.358);
   color:rgb(247, 247, 57) ;
+  border-radius: 50%;
 }
 .answer {
   margin: 4%;
   background:rgba(0, 0, 0, 0.358);
   color:rgb(247, 247, 57) ;
+  border-radius: 50%;
 }
 
-@media (max-width:700px) {
-  
+.Summary {
+  position: relative;
+  margin: 4%;
+  background:rgba(0, 0, 0, 0.358);
+  color:rgb(247, 247, 57) ;
+  border-radius: 50%;
 }
