--- a/src/App.css
+++ b/src/App.css
@@ -63,9 +63,10 @@ header {
   -webkit-text-emphasis-style: triangle;
   text-emphasis-style: triangle;
   font-family: Monofett;
-  font-size: 20px;
+  font-size: 24px;
   margin: 0 auto;
   align-self: flex-end;
+  padding: 15px;
 }
 
 main {
